docs: add administrative SQL queries and report panel to README.md